[package]
name = "quell_machine"
version = "0.1.0"
edition = "2021"
description = "Another Cell Machine remake but focused on speed"

[dependencies]
speedy2d = "1.4"
clipboard = "0.5"
image = "0.23"
libdeflater = "0.7"
base64 = "0.13"

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1
