[package]
name = "quell_machine"
version = "0.2.0"
edition = "2021"
description = "Another Cell Machine remake but focused on speed"

[dependencies]
speedy2d = "1.4"
clipboard = "0.5"
image = "0.24"
libdeflater = "0.12"
base64 = "0.21"

[profile.release]
opt-level = 3
debug = true
# strip = "symbols"
lto = "fat"
panic = "abort"
codegen-units = 1
